[package]
name = "csvsql"
version = "0.1.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
edition = "2024"

[dependencies]
csv = "1.3"
indicatif = "0.18"
comfy-table = "7.1"
regex = "1.11"
rusqlite = { version = "0.37", features = ["functions"] }
rustyline = "17"
clap = { version = "4.5.44", features = ["derive"] }
dirs = "6.0"
anyhow = "1.0.99"
